Java 24 features... -- all bull shit. nothing working !